--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T07:08:47.226Z",
-        "lastAccessed": "2025-08-13T07:08:47.232Z"
+        "creation": "2025-08-13T08:23:59.245Z",
+        "lastAccessed": "2025-08-13T08:23:59.246Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T07:08:47.232Z",
-        "lastAccessed": "2025-08-13T07:08:47.232Z"
+        "creation": "2025-08-13T08:23:59.246Z",
+        "lastAccessed": "2025-08-13T08:23:59.246Z"
     },
     {
         "key": "locale",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T07:08:47.232Z",
-        "lastAccessed": "2025-08-13T07:08:47.232Z"
+        "creation": "2025-08-13T08:23:59.246Z",
+        "lastAccessed": "2025-08-13T08:23:59.246Z"
     },
     {
         "key": "pas",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T07:08:47.232Z",
-        "lastAccessed": "2025-08-13T07:08:47.232Z"
+        "creation": "2025-08-13T08:23:59.246Z",
+        "lastAccessed": "2025-08-13T08:23:59.246Z"
     },
     {
         "key": "vpd",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T07:08:47.232Z",
-        "lastAccessed": "2025-08-13T07:08:47.232Z"
+        "creation": "2025-08-13T08:23:59.246Z",
+        "lastAccessed": "2025-08-13T08:23:59.246Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T07:08:47.232Z",
-        "lastAccessed": "2025-08-13T07:08:47.232Z"
+        "creation": "2025-08-13T08:23:59.246Z",
+        "lastAccessed": "2025-08-13T08:23:59.246Z"
     },
     {
         "key": "ps_n",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T07:08:47.232Z",
-        "lastAccessed": "2025-08-13T07:08:47.232Z"
+        "creation": "2025-08-13T08:23:59.246Z",
+        "lastAccessed": "2025-08-13T08:23:59.246Z"
     },
     {
         "key": "wl_cbv",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T07:08:47.232Z",
-        "lastAccessed": "2025-08-13T07:08:47.232Z"
+        "creation": "2025-08-13T08:23:59.246Z",
+        "lastAccessed": "2025-08-13T08:23:59.246Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T07:08:47.232Z",
-        "lastAccessed": "2025-08-13T07:08:47.232Z"
+        "creation": "2025-08-13T08:23:59.246Z",
+        "lastAccessed": "2025-08-13T08:23:59.246Z"
     },
     {
         "key": "wd",
@@ -86,34 +86,16 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T07:08:47.232Z",
-        "lastAccessed": "2025-08-13T07:08:47.232Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61552905299432",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T07:08:47.232Z",
-        "lastAccessed": "2025-08-13T07:08:47.232Z"
+        "creation": "2025-08-13T08:23:59.246Z",
+        "lastAccessed": "2025-08-13T08:23:59.246Z"
     },
     {
         "key": "fr",
-        "value": "0ifFk4CHLiLxjHzCd.AWcbVq6ZxIw2PTVL8q7dA1nPd65tiBy34H-ogVB59yrhs1MwbRg.BonCai..AAA.0.0.BonDnh.AWfC3wDqFoG9edhtasrxxanhMRI",
+        "value": "0ifFk4CHLiLxjHzCd.AWfaxiXjGt1ZhmWhLUSNBuIu5rHt1BjY25nuenQEfhD-PsYpRFI.BonCai..AAA.0.0.BonEuf.AWdC2JJYSkLsfK8XTlO_uwkJt1E",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T07:08:47.232Z",
-        "lastAccessed": "2025-08-13T07:08:47.232Z"
-    },
-    {
-        "key": "xs",
-        "value": "48%3A5JGkCvDa8Xc7gw%3A2%3A1755068900%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T07:08:47.232Z",
-        "lastAccessed": "2025-08-13T07:08:47.232Z"
+        "creation": "2025-08-13T08:23:59.246Z",
+        "lastAccessed": "2025-08-13T08:23:59.246Z"
     }
 ]
