--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T08:23:59.245Z",
-        "lastAccessed": "2025-08-13T08:23:59.246Z"
+        "creation": "2025-08-13T08:32:33.125Z",
+        "lastAccessed": "2025-08-13T08:32:33.125Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T08:23:59.246Z",
-        "lastAccessed": "2025-08-13T08:23:59.246Z"
+        "creation": "2025-08-13T08:32:33.125Z",
+        "lastAccessed": "2025-08-13T08:32:33.125Z"
     },
     {
         "key": "locale",
@@ -23,17 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T08:23:59.246Z",
-        "lastAccessed": "2025-08-13T08:23:59.246Z"
-    },
-    {
-        "key": "pas",
-        "value": "61552905299432%3AUWZKf61lIv",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T08:23:59.246Z",
-        "lastAccessed": "2025-08-13T08:23:59.246Z"
+        "creation": "2025-08-13T08:32:33.125Z",
+        "lastAccessed": "2025-08-13T08:32:33.125Z"
     },
     {
         "key": "vpd",
@@ -41,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T08:23:59.246Z",
-        "lastAccessed": "2025-08-13T08:23:59.246Z"
+        "creation": "2025-08-13T08:32:33.125Z",
+        "lastAccessed": "2025-08-13T08:32:33.125Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T08:23:59.246Z",
-        "lastAccessed": "2025-08-13T08:23:59.246Z"
+        "creation": "2025-08-13T08:32:33.125Z",
+        "lastAccessed": "2025-08-13T08:32:33.125Z"
     },
     {
         "key": "ps_n",
@@ -59,17 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T08:23:59.246Z",
-        "lastAccessed": "2025-08-13T08:23:59.246Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2892%3Btimestamp%3A1755066107",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T08:23:59.246Z",
-        "lastAccessed": "2025-08-13T08:23:59.246Z"
+        "creation": "2025-08-13T08:32:33.125Z",
+        "lastAccessed": "2025-08-13T08:32:33.125Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T08:23:59.246Z",
-        "lastAccessed": "2025-08-13T08:23:59.246Z"
+        "creation": "2025-08-13T08:32:33.126Z",
+        "lastAccessed": "2025-08-13T08:32:33.126Z"
     },
     {
         "key": "wd",
@@ -86,16 +68,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T08:23:59.246Z",
-        "lastAccessed": "2025-08-13T08:23:59.246Z"
+        "creation": "2025-08-13T08:32:33.126Z",
+        "lastAccessed": "2025-08-13T08:32:33.126Z"
     },
     {
-        "key": "fr",
-        "value": "0ifFk4CHLiLxjHzCd.AWfaxiXjGt1ZhmWhLUSNBuIu5rHt1BjY25nuenQEfhD-PsYpRFI.BonCai..AAA.0.0.BonEuf.AWdC2JJYSkLsfK8XTlO_uwkJt1E",
+        "key": "c_user",
+        "value": "61552905299432",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T08:23:59.246Z",
-        "lastAccessed": "2025-08-13T08:23:59.246Z"
+        "creation": "2025-08-13T08:32:33.126Z",
+        "lastAccessed": "2025-08-13T08:32:33.126Z"
+    },
+    {
+        "key": "xs",
+        "value": "28%3A_I_MqcFA2XteFA%3A2%3A1755073925%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T08:32:33.126Z",
+        "lastAccessed": "2025-08-13T08:32:33.126Z"
+    },
+    {
+        "key": "fr",
+        "value": "0ifFk4CHLiLxjHzCd.AWfd_NT0XWVOd45vRqPWA4ha0Dk5Z7fovOc1CfY9rb-ERCHb2-A.BonCai..AAA.0.0.BonE2Z.AWdDs7ETA1gJ7t5A-I9fbMQ3IxI",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T08:32:33.126Z",
+        "lastAccessed": "2025-08-13T08:32:33.126Z"
+    },
+    {
+        "key": "pas",
+        "value": "61552905299432%3Agpq6LK9DbU",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T08:32:33.126Z",
+        "lastAccessed": "2025-08-13T08:32:33.126Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2892%3Btimestamp%3A1755073945",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T08:32:33.126Z",
+        "lastAccessed": "2025-08-13T08:32:33.126Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101616584%3BT%3A29251232",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T08:32:33.126Z",
+        "lastAccessed": "2025-08-13T08:32:33.126Z"
     }
 ]
