--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T09:05:49.581Z",
-        "lastAccessed": "2025-08-13T09:05:49.621Z"
+        "creation": "2025-08-13T09:17:50.396Z",
+        "lastAccessed": "2025-08-13T09:17:50.396Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T09:05:49.621Z",
-        "lastAccessed": "2025-08-13T09:05:49.621Z"
+        "creation": "2025-08-13T09:17:50.396Z",
+        "lastAccessed": "2025-08-13T09:17:50.396Z"
     },
     {
         "key": "locale",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T09:05:49.621Z",
-        "lastAccessed": "2025-08-13T09:05:49.621Z"
+        "creation": "2025-08-13T09:17:50.396Z",
+        "lastAccessed": "2025-08-13T09:17:50.396Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T09:05:49.621Z",
-        "lastAccessed": "2025-08-13T09:05:49.621Z"
+        "creation": "2025-08-13T09:17:50.396Z",
+        "lastAccessed": "2025-08-13T09:17:50.396Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T09:05:49.621Z",
-        "lastAccessed": "2025-08-13T09:05:49.621Z"
+        "creation": "2025-08-13T09:17:50.396Z",
+        "lastAccessed": "2025-08-13T09:17:50.397Z"
     },
     {
         "key": "ps_n",
@@ -50,35 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T09:05:49.621Z",
-        "lastAccessed": "2025-08-13T09:05:49.621Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61552905299432",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T09:05:49.621Z",
-        "lastAccessed": "2025-08-13T09:05:49.621Z"
-    },
-    {
-        "key": "xs",
-        "value": "28%3A_I_MqcFA2XteFA%3A2%3A1755073925%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T09:05:49.621Z",
-        "lastAccessed": "2025-08-13T09:05:49.621Z"
-    },
-    {
-        "key": "fr",
-        "value": "0ifFk4CHLiLxjHzCd.AWfd_NT0XWVOd45vRqPWA4ha0Dk5Z7fovOc1CfY9rb-ERCHb2-A.BonCai..AAA.0.0.BonE2Z.AWdDs7ETA1gJ7t5A-I9fbMQ3IxI",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T09:05:49.621Z",
-        "lastAccessed": "2025-08-13T09:05:49.621Z"
+        "creation": "2025-08-13T09:17:50.397Z",
+        "lastAccessed": "2025-08-13T09:17:50.397Z"
     },
     {
         "key": "pas",
@@ -86,25 +59,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T09:05:49.621Z",
-        "lastAccessed": "2025-08-13T09:05:49.621Z"
+        "creation": "2025-08-13T09:17:50.397Z",
+        "lastAccessed": "2025-08-13T09:17:50.397Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61552905299432",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T09:17:50.397Z",
+        "lastAccessed": "2025-08-13T09:17:50.397Z"
+    },
+    {
+        "key": "xs",
+        "value": "17%3AfgkWce3M71P4WQ%3A2%3A1755076249%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T09:17:50.397Z",
+        "lastAccessed": "2025-08-13T09:17:50.397Z"
+    },
+    {
+        "key": "fr",
+        "value": "0ifFk4CHLiLxjHzCd.AWeVrNuFIT4vjBrHQK-X8XknJ-aOmPblwfDYFGQOWk4Uj8P03EQ.BonCai..AAA.0.0.BonFg6.AWcQbr_WTwmI_4sFlnPnyMDKnf0",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T09:17:50.397Z",
+        "lastAccessed": "2025-08-13T09:17:50.397Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2892%3Btimestamp%3A1755073945",
+        "value": "v2%3Bclient_version%3A2892%3Btimestamp%3A1755076666",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T09:05:49.621Z",
-        "lastAccessed": "2025-08-13T09:05:49.621Z"
+        "creation": "2025-08-13T09:17:50.397Z",
+        "lastAccessed": "2025-08-13T09:17:50.397Z"
     },
     {
         "key": "fbl_st",
-        "value": "101616584%3BT%3A29251232",
+        "value": "100633048%3BT%3A29251277",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T09:05:49.621Z",
-        "lastAccessed": "2025-08-13T09:05:49.621Z"
+        "creation": "2025-08-13T09:17:50.397Z",
+        "lastAccessed": "2025-08-13T09:17:50.397Z"
     }
 ]
