--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:40:43.332Z",
-        "lastAccessed": "2025-08-13T16:40:43.338Z"
+        "creation": "2025-08-13T16:48:45.754Z",
+        "lastAccessed": "2025-08-13T16:48:45.757Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:40:43.338Z",
-        "lastAccessed": "2025-08-13T16:40:43.338Z"
+        "creation": "2025-08-13T16:48:45.757Z",
+        "lastAccessed": "2025-08-13T16:48:45.757Z"
     },
     {
         "key": "locale",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:40:43.339Z",
-        "lastAccessed": "2025-08-13T16:40:43.339Z"
+        "creation": "2025-08-13T16:48:45.757Z",
+        "lastAccessed": "2025-08-13T16:48:45.757Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:40:43.339Z",
-        "lastAccessed": "2025-08-13T16:40:43.339Z"
+        "creation": "2025-08-13T16:48:45.758Z",
+        "lastAccessed": "2025-08-13T16:48:45.758Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:40:43.339Z",
-        "lastAccessed": "2025-08-13T16:40:43.339Z"
+        "creation": "2025-08-13T16:48:45.758Z",
+        "lastAccessed": "2025-08-13T16:48:45.758Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:40:43.339Z",
-        "lastAccessed": "2025-08-13T16:40:43.339Z"
+        "creation": "2025-08-13T16:48:45.758Z",
+        "lastAccessed": "2025-08-13T16:48:45.758Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:40:43.339Z",
-        "lastAccessed": "2025-08-13T16:40:43.339Z"
+        "creation": "2025-08-13T16:48:45.758Z",
+        "lastAccessed": "2025-08-13T16:48:45.758Z"
     },
     {
         "key": "c_user",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:40:43.339Z",
-        "lastAccessed": "2025-08-13T16:40:43.339Z"
+        "creation": "2025-08-13T16:48:45.758Z",
+        "lastAccessed": "2025-08-13T16:48:45.758Z"
     },
     {
         "key": "xs",
@@ -77,34 +77,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:40:43.339Z",
-        "lastAccessed": "2025-08-13T16:40:43.339Z"
+        "creation": "2025-08-13T16:48:45.758Z",
+        "lastAccessed": "2025-08-13T16:48:45.758Z"
     },
     {
         "key": "fr",
-        "value": "0ifFk4CHLiLxjHzCd.AWcJyjcOak6S48HfNNl_xXY7ZxN5jL3DVTRWqNXydvwYRy2UDTY.BonCai..AAA.0.0.BonL8H.AWeyO51BUY4ObixvBRzs7Omi2lk",
+        "value": "0ifFk4CHLiLxjHzCd.AWegc3nTl2p1pN1SOe6OFbvxvU6Pza6oVQbcC1a0HUEl5GsIR00.BonCai..AAA.0.0.BonMHo.AWfsWSm_f4JSBsJmu23f2MN99-w",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:40:43.339Z",
-        "lastAccessed": "2025-08-13T16:40:43.339Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101726853%3BT%3A29251716",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T16:40:43.339Z",
-        "lastAccessed": "2025-08-13T16:40:43.339Z"
+        "creation": "2025-08-13T16:48:45.758Z",
+        "lastAccessed": "2025-08-13T16:48:45.758Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2892%3Btimestamp%3A1755102983",
+        "value": "v2%3Bclient_version%3A2892%3Btimestamp%3A1755103720",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:40:43.339Z",
-        "lastAccessed": "2025-08-13T16:40:43.339Z"
+        "creation": "2025-08-13T16:48:45.758Z",
+        "lastAccessed": "2025-08-13T16:48:45.758Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101737252%3BT%3A29251728",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T16:48:45.758Z",
+        "lastAccessed": "2025-08-13T16:48:45.758Z"
     }
 ]
