--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:48:45.754Z",
-        "lastAccessed": "2025-08-13T16:48:45.757Z"
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:48:45.757Z",
-        "lastAccessed": "2025-08-13T16:48:45.757Z"
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
     },
     {
         "key": "locale",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:48:45.757Z",
-        "lastAccessed": "2025-08-13T16:48:45.757Z"
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:48:45.758Z",
-        "lastAccessed": "2025-08-13T16:48:45.758Z"
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:48:45.758Z",
-        "lastAccessed": "2025-08-13T16:48:45.758Z"
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:48:45.758Z",
-        "lastAccessed": "2025-08-13T16:48:45.758Z"
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:48:45.758Z",
-        "lastAccessed": "2025-08-13T16:48:45.758Z"
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.5303868055343628",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
+    },
+    {
+        "key": "wd",
+        "value": "400x889",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
     },
     {
         "key": "c_user",
@@ -68,43 +86,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:48:45.758Z",
-        "lastAccessed": "2025-08-13T16:48:45.758Z"
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
     },
     {
         "key": "xs",
-        "value": "46%3A9iy3lU0TL1VXPw%3A2%3A1755091285%3A-1%3A-1",
+        "value": "26%3AKaSqUfgUwMh7nw%3A2%3A1755106565%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:48:45.758Z",
-        "lastAccessed": "2025-08-13T16:48:45.758Z"
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
     },
     {
         "key": "fr",
-        "value": "0ifFk4CHLiLxjHzCd.AWegc3nTl2p1pN1SOe6OFbvxvU6Pza6oVQbcC1a0HUEl5GsIR00.BonCai..AAA.0.0.BonMHo.AWfsWSm_f4JSBsJmu23f2MN99-w",
+        "value": "0ifFk4CHLiLxjHzCd.AWeCqL5SaT-fr4eLgN2L42va-sCYB6xEjmULI5GgyKMATb_XF9w.BonCai..AAA.0.0.BonM0I.AWcCJBGqN_2QLHzWmZxV-eUPybY",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:48:45.758Z",
-        "lastAccessed": "2025-08-13T16:48:45.758Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2892%3Btimestamp%3A1755103720",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T16:48:45.758Z",
-        "lastAccessed": "2025-08-13T16:48:45.758Z"
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
     },
     {
         "key": "fbl_st",
-        "value": "101737252%3BT%3A29251728",
+        "value": "101735201%3BT%3A29251776",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T16:48:45.758Z",
-        "lastAccessed": "2025-08-13T16:48:45.758Z"
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2892%3Btimestamp%3A1755106568",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T17:36:10.024Z",
+        "lastAccessed": "2025-08-13T17:36:10.024Z"
     }
 ]
