--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.638Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
+        "creation": "2025-08-13T20:44:07.740Z",
+        "lastAccessed": "2025-08-13T20:44:07.740Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.640Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
+        "creation": "2025-08-13T20:44:07.741Z",
+        "lastAccessed": "2025-08-13T20:44:07.741Z"
     },
     {
         "key": "locale",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.640Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
+        "creation": "2025-08-13T20:44:07.741Z",
+        "lastAccessed": "2025-08-13T20:44:07.741Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.640Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
+        "creation": "2025-08-13T20:44:07.741Z",
+        "lastAccessed": "2025-08-13T20:44:07.741Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.640Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
+        "creation": "2025-08-13T20:44:07.741Z",
+        "lastAccessed": "2025-08-13T20:44:07.741Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.640Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
+        "creation": "2025-08-13T20:44:07.741Z",
+        "lastAccessed": "2025-08-13T20:44:07.741Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.640Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
+        "creation": "2025-08-13T20:44:07.741Z",
+        "lastAccessed": "2025-08-13T20:44:07.741Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.640Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
+        "creation": "2025-08-13T20:44:07.741Z",
+        "lastAccessed": "2025-08-13T20:44:07.741Z"
     },
     {
         "key": "wd",
@@ -77,35 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.640Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61552905299432",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.640Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
-    },
-    {
-        "key": "xs",
-        "value": "44%3AqLYXjyeCGUyy0g%3A2%3A1755117115%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.640Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
-    },
-    {
-        "key": "fr",
-        "value": "0ifFk4CHLiLxjHzCd.AWdBqmFJcCSy6KZtvHLICDT2cswAtsisqfOLsliwAvK5oa99UpA.BonCai..AAA.0.0.BonPY9.AWfgBw1ieh4vfSE6DbTQLOJMtDU",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.640Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
+        "creation": "2025-08-13T20:44:07.741Z",
+        "lastAccessed": "2025-08-13T20:44:07.741Z"
     },
     {
         "key": "wl_cbv",
@@ -113,16 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.640Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
+        "creation": "2025-08-13T20:44:07.741Z",
+        "lastAccessed": "2025-08-13T20:44:07.741Z"
     },
     {
-        "key": "fbl_st",
-        "value": "101723617%3BT%3A29251952",
+        "key": "c_user",
+        "value": "61552905299432",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-13T20:40:58.640Z",
-        "lastAccessed": "2025-08-13T20:40:58.640Z"
+        "creation": "2025-08-13T20:44:07.741Z",
+        "lastAccessed": "2025-08-13T20:44:07.741Z"
+    },
+    {
+        "key": "xs",
+        "value": "45%3AGXLXYHJ4gbTy9w%3A2%3A1755117838%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T20:44:07.741Z",
+        "lastAccessed": "2025-08-13T20:44:07.741Z"
+    },
+    {
+        "key": "fr",
+        "value": "0ifFk4CHLiLxjHzCd.AWfrizUCJ8bc1lPb0KMH0YiNWoTubYMxD9ySkjx-wexPBMRkdy8.BonCai..AAA.0.0.BonPkQ.AWdOthR-VuviUH5ubMtMUVIwBek",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-13T20:44:07.741Z",
+        "lastAccessed": "2025-08-13T20:44:07.741Z"
     }
 ]
