--- a/config.json
+++ b/config.json
@@ -16,11 +16,11 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Ufff ☢️_𖣘 -Jan ⚠️",
+    "BOTNAME": "ম্ঁণি্ঁরে্ঁর FMZ ব্ঁট্ঁ,🧐🦋😛",
     "PREFIX": "/",
     "ADMINBOT": [
-        "615704118978",
-        "61552905432",
+        "61570498118978",
+        "61552905299432",
         ""
     ],
     "NDH": [
